# race-time-tracker

./: .gitignore  Forside.py  README.md  app.py  column_names.py  db_utils.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
db_migrations/: V1__create.sql  V2__convert_values.sql  V3__add_race_name.sql
pages/: 1_Indtast_tid.py  2_Registrerede_tider.py
utils/: date_utils.py
