[tool.poetry]
name = "lenes-project"
version = "0.1.0"
description = ""
authors = ["lene-hansen <lene.hansen@bestseller.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.42.0"
supabase = "^2.13.0"
st-supabase-connection = "^2.0.1"
streamlit-aggrid = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
